--- a/FavoritesMenu/Views/SettingsWindow.xaml
+++ b/FavoritesMenu/Views/SettingsWindow.xaml
@@ -1,12 +1,12 @@
-﻿<ui:FluentWindow x:Class="FavoritesMenu.SettingsWindow" x:ClassModifier="internal"
+﻿<ui:FluentWindow x:Class="FavoritesMenu.Views.SettingsWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:FavoritesMenu"
+        xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:SettingsViewModel}"
+        d:DataContext="{d:DesignInstance vm:SettingsViewModel}"
         Title="Settings" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" MinHeight="100" ResizeMode="NoResize" MinWidth="100"
         ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
         ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
