--- a/FavoritesMenu/App.xaml
+++ b/FavoritesMenu/App.xaml
@@ -1,9 +1,6 @@
 ﻿<Application x:Class="FavoritesMenu.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:tb="http://www.hardcodet.net/taskbar"
-             xmlns:local="clr-namespace:FavoritesMenu"
-             xmlns:localBehaviors="clr-namespace:FavoritesMenu.Behaviors"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
@@ -11,7 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
-                <ResourceDictionary Source="/NotifyIconResources.xaml" />
+                <ResourceDictionary Source="/Resources/NotifyIconResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
