--- a/FavoritesMenu/Resources/NotifyIconResources.xaml
+++ b/FavoritesMenu/Resources/NotifyIconResources.xaml
@@ -1,13 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:tb="http://www.hardcodet.net/taskbar"
-                    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-                    xmlns:local="clr-namespace:FavoritesMenu"
-                    xmlns:localBehaviors="clr-namespace:FavoritesMenu.Behaviors">
+                    xmlns:conv="clr-namespace:FavoritesMenu.Converters"
+                    xmlns:root="clr-namespace:FavoritesMenu"
+                    xmlns:behaviors="clr-namespace:FavoritesMenu.Behaviors"
+                    xmlns:vm="clr-namespace:FavoritesMenu.ViewModels">
 
-    <local:ImageSourceToImageConverter x:Key="ImageConverter" />
+    <BitmapSource x:Key="NotifyIcon">/Resources/Notify.ico</BitmapSource>
 
-    <local:EscapeAccessKeyConverter x:Key="EscapeConverter" />
+    <conv:ImageSourceToImageConverter x:Key="ImageConverter" />
+
+    <conv:EscapeAccessKeyConverter x:Key="EscapeConverter" />
 
     <Style TargetType="{x:Type MenuItem}" x:Key="DefaultMenuItemStyle">
         <Setter Property="Header" Value="{Binding DisplayName,Converter={StaticResource EscapeConverter}}" />
@@ -17,8 +20,8 @@
         <Setter Property="Command" Value="{Binding DataContext.OpenItemCommand,RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
         <Setter Property="CommandParameter" Value="{Binding}" />
 
-        <Setter Property="localBehaviors:RightClickBehaviors.Command" Value="{Binding DataContext.OpenContextMenuCommand,RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
-        <Setter Property="localBehaviors:RightClickBehaviors.CommandParameter" Value="{Binding}" />
+        <Setter Property="behaviors:RightClickBehaviors.Command" Value="{Binding DataContext.OpenContextMenuCommand,RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+        <Setter Property="behaviors:RightClickBehaviors.CommandParameter" Value="{Binding}" />
     </Style>
 
     <Style TargetType="{x:Type MenuItem}" x:Key="SearchMenuItemStyle">
@@ -31,7 +34,7 @@
         </Setter>
     </Style>
 
-    <local:MenuItemStyleSelector x:Key="MenuItemStyleSelector" DefaultMenuItemStyle="{StaticResource DefaultMenuItemStyle}" SearchMenuItemStyle="{StaticResource SearchMenuItemStyle}" />
+    <root:MenuItemStyleSelector x:Key="MenuItemStyleSelector" DefaultMenuItemStyle="{StaticResource DefaultMenuItemStyle}" SearchMenuItemStyle="{StaticResource SearchMenuItemStyle}" />
 
     <ContextMenu x:Key="SysTrayMenu" x:Shared="false" ItemsSource="{Binding Items}" ItemContainerStyleSelector="{StaticResource MenuItemStyleSelector}" />
 
@@ -63,15 +66,15 @@
     </ContextMenu>
 
     <tb:TaskbarIcon
-            x:Key="NotifyIcon"
-            IconSource="/Notify.ico"
+            x:Key="TaskbarIcon"
+            IconSource="{StaticResource NotifyIcon}"
             ToolTipText="Favorites Menu"
             NoLeftClickDelay="True"
             MenuActivation="LeftClick"
-            localBehaviors:RightClickBehaviors.TrayRightClickContextMenu="{StaticResource RightClickMenu}"
+            behaviors:RightClickBehaviors.TrayRightClickContextMenu="{StaticResource RightClickMenu}"
             ContextMenu="{StaticResource SysTrayMenu}">
         <tb:TaskbarIcon.DataContext>
-            <local:NotifyIconViewModel />
+            <vm:NotifyIconViewModel />
         </tb:TaskbarIcon.DataContext>
     </tb:TaskbarIcon>
 </ResourceDictionary>
