--- a/FavoritesMenu/Views/AboutWindow.xaml
+++ b/FavoritesMenu/Views/AboutWindow.xaml
@@ -1,11 +1,11 @@
-﻿<ui:FluentWindow x:Class="FavoritesMenu.AboutWindow" x:ClassModifier="internal"
+﻿<ui:FluentWindow x:Class="FavoritesMenu.Views.AboutWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:FavoritesMenu"
-        Icon = "/Notify.ico"
+        xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"        
+        Icon = "{StaticResource NotifyIcon}"
         mc:Ignorable="d" Title="About"
         SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" MinHeight="10" ResizeMode="NoResize" MinWidth="10"
         ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
@@ -14,7 +14,7 @@
         WindowBackdropType="Mica"
         ExtendsContentIntoTitleBar="True">
     <Window.DataContext>
-        <local:AboutWindowViewModel />
+        <vm:AboutWindowViewModel />
     </Window.DataContext>
     <StackPanel>
         <ui:TitleBar Title="About" Height="32" />
