--- a/FavoritesMenu/Views/SearchWindow.xaml
+++ b/FavoritesMenu/Views/SearchWindow.xaml
@@ -1,30 +1,32 @@
-﻿<ui:FluentWindow x:Class="FavoritesMenu.SearchWindow" x:ClassModifier="internal"
+﻿<ui:FluentWindow x:Class="FavoritesMenu.Views.SearchWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:FavoritesMenu"
-        Icon = "/Notify.ico"
+        xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"
+        xmlns:conv="clr-namespace:FavoritesMenu.Converters"
+        xmlns:root="clr-namespace:FavoritesMenu"
+        Icon = "{StaticResource NotifyIcon}"
         mc:Ignorable="d" Title="Search"
         WindowStartupLocation="CenterScreen" MinHeight="10" MinWidth="10" Height="500"
-        d:DataContext="{d:DesignInstance {x:Type local:SearchItemViewModel}}"
+        d:DataContext="{d:DesignInstance {x:Type vm:SearchItemViewModel}}"
         ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
         ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         WindowBackdropType="Mica"
         ExtendsContentIntoTitleBar="True" d:DesignHeight="293.361" d:DesignWidth="444.222">
     <ui:FluentWindow.Resources>
-        <local:ImageSourceToImageConverter x:Key="ImageConverter" />
+        <conv:ImageSourceToImageConverter x:Key="ImageConverter" />
     </ui:FluentWindow.Resources>
     <DockPanel>
-        <ui:TitleBar Title="About" Height="32" DockPanel.Dock="Top" />
+        <ui:TitleBar Title="Search" Height="32" DockPanel.Dock="Top" />
 
         <TextBox DockPanel.Dock="Top" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}" x:Name="searchTextBox" />
 
         <ui:ListView ItemsSource="{Binding Source.View}">
             <ui:ListView.ItemTemplate>
-                <DataTemplate DataType="{x:Type local:ItemData}">
+                <DataTemplate DataType="{x:Type root:ItemData}">
                     <Grid Margin="8,0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
