--- a/FavoritesMenu/Views/AboutPage.xaml
+++ b/FavoritesMenu/Views/AboutPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="FavoritesMenu.Views.AboutPage"
+﻿<Page x:Class="FavoritesMenu.Views.AboutPage" x:ClassModifier="internal"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,8 +12,9 @@
     <StackPanel>
         <ui:TextBlock FontTypography="Subtitle">Favorites Menu</ui:TextBlock>
         <ui:TextBlock Margin="0,10,0,0">Version:
-            <Run Text="{Binding Version}" />
+            <Run Text="{Binding Version, Mode=OneTime}" />
         </ui:TextBlock>
-        <ui:HyperlinkButton NavigateUri="https://github.com/Chri-s/FavoritesMenu">https://github.com/Chri-s/FavoritesMenu</ui:HyperlinkButton>
+        <ui:HyperlinkButton Margin="0,10,0,0"
+                            NavigateUri="https://github.com/Chri-s/FavoritesMenu">https://github.com/Chri-s/FavoritesMenu</ui:HyperlinkButton>
     </StackPanel>
 </Page>
