--- a/FavoritesMenu/Views/MainWindow.xaml
+++ b/FavoritesMenu/Views/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"
-        xmlns:local="clr-namespace:FavoritesMenu.Views"
         ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
         ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+        d:DataContext="{d:DesignInstance Type={x:Type vm:MainWindowViewModel}, IsDesignTimeCreatable=False}"
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
         WindowCornerPreference="Default"
@@ -25,6 +25,7 @@
             OpenPaneLength="150"
             IsBackButtonVisible="Collapsed"
             PaneDisplayMode="Left"
+            SelectionChanged="NavigationView_SelectionChanged"
             TitleBar="{Binding ElementName=TitleBar, Mode=OneWay}"
             Transition="FadeInWithSlide">
             <ui:NavigationView.Header>
