--- a/FavoritesMenu/Views/SearchPage.xaml
+++ b/FavoritesMenu/Views/SearchPage.xaml
@@ -1,15 +1,51 @@
-﻿<Page x:Class="FavoritesMenu.Views.SearchPage"
+﻿<Page x:Class="FavoritesMenu.Views.SearchPage" x:ClassModifier="internal"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FavoritesMenu.Views"
+      xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"
+      xmlns:conv="clr-namespace:FavoritesMenu.Converters"
+      xmlns:root="clr-namespace:FavoritesMenu"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       mc:Ignorable="d" 
+      d:DataContext="{d:DesignInstance {x:Type vm:SearchViewModel}, IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Search">
-    <Grid>
-        <TextBlock>This is the search page</TextBlock>
-    </Grid>
+    <Page.Resources>
+        <conv:ImageSourceToImageConverter x:Key="ImageConverter" />
+    </Page.Resources>
+    <DockPanel>
+        <ui:TextBox DockPanel.Dock="Top" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}" x:Name="searchTextBox" PlaceholderText="Search text" />
+
+        <ui:ListView ItemsSource="{Binding Source.View}" Margin="0,10,0,0">
+            <ui:ListView.ItemTemplate>
+                <DataTemplate DataType="{x:Type root:ItemData}">
+                    <Grid Margin="8,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.RowSpan="2" Source="{Binding LargeImageSource}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <TextBlock
+                                    Grid.Row="0"
+                                    Grid.Column="1"
+                                    Margin="12,6,0,0"
+                                    FontWeight="Bold"
+                                    Text="{Binding DisplayName, Mode=OneWay}" />
+                        <TextBlock
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    Margin="12,0,0,6"
+                                    Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                                    Text="{Binding FolderPath, Mode=OneWay}" />
+                    </Grid>
+                </DataTemplate>
+            </ui:ListView.ItemTemplate>
+        </ui:ListView>
+    </DockPanel>
 </Page>
