--- a/FavoritesMenu/Views/SettingsPage.xaml
+++ b/FavoritesMenu/Views/SettingsPage.xaml
@@ -9,12 +9,9 @@
       xmlns:local="clr-namespace:FavoritesMenu.Views"
       mc:Ignorable="d" 
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      d:DataContext="{d:DesignInstance Type={x:Type vm:SettingsViewModel}, IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Settings">
-    <Page.DataContext>
-        <vm:SettingsViewModel />
-    </Page.DataContext>
-
     <StackPanel Margin="0,0,0,24">
         <ui:TextBlock
             Margin="0,0,0,8"
