--- a/FavoritesMenu/Views/MainWindow.xaml
+++ b/FavoritesMenu/Views/MainWindow.xaml
@@ -33,7 +33,7 @@
             </ui:NavigationView.Header>
         </ui:NavigationView>
 
-        <ContentPresenter x:Name="RootContentDialog" Grid.Row="0" />
+        <!--<ContentPresenter x:Name="RootContentDialog" Grid.Row="0" />-->
 
         <ui:TitleBar
             x:Name="TitleBar"
