--- a/FavoritesMenu/Views/SearchPage.xaml
+++ b/FavoritesMenu/Views/SearchPage.xaml
@@ -7,18 +7,39 @@
       xmlns:vm="clr-namespace:FavoritesMenu.ViewModels"
       xmlns:conv="clr-namespace:FavoritesMenu.Converters"
       xmlns:root="clr-namespace:FavoritesMenu"
+      xmlns:b="clr-namespace:FavoritesMenu.Behaviors"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance {x:Type vm:SearchViewModel}, IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
+      ScrollViewer.CanContentScroll="False"
       Title="Search">
     <Page.Resources>
         <conv:ImageSourceToImageConverter x:Key="ImageConverter" />
     </Page.Resources>
     <DockPanel>
-        <ui:TextBox DockPanel.Dock="Top" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}" x:Name="searchTextBox" PlaceholderText="Search text" />
+        <ui:TextBox
+            DockPanel.Dock="Top"
+            Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}"
+            x:Name="searchTextBox"
+            PlaceholderText="Search items"
+            PreviewKeyDown="searchTextBox_PreviewKeyDown">
+            <ui:TextBox.InputBindings>
+                <KeyBinding Key="Return" Command="{Binding OpenItemCommand}" CommandParameter="{Binding SelectedItem}" />
+                <KeyBinding Gesture="Shift+Return" Command="{Binding OpenContextMenuCommand}" CommandParameter="{Binding SelectedItem}" />
+            </ui:TextBox.InputBindings>
+        </ui:TextBox>
 
-        <ui:ListView ItemsSource="{Binding Source.View}" Margin="0,10,0,0">
+        <ui:ListView ItemsSource="{Binding Source.View}" Margin="0,10,0,0" SelectedItem="{Binding SelectedItem}" x:Name="resultListView">
+            <ui:ListView.Resources>
+                <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemStyle}">
+                    <Setter Property="b:ControlBehaviors.DoubleClickCommand" Value="{Binding Path=DataContext.OpenItemCommand, RelativeSource={RelativeSource AncestorType=ListView}}" />
+                    <Setter Property="b:ControlBehaviors.DoubleClickCommandParameter" Value="{Binding}" />
+
+                    <Setter Property="b:ControlBehaviors.RightClickCommand" Value="{Binding Path=DataContext.OpenContextMenuCommand, RelativeSource={RelativeSource AncestorType=ListView}}" />
+                    <Setter Property="b:ControlBehaviors.RightClickCommandParameter" Value="{Binding}" />
+                </Style>
+            </ui:ListView.Resources>
             <ui:ListView.ItemTemplate>
                 <DataTemplate DataType="{x:Type root:ItemData}">
                     <Grid Margin="8,0">
