--- a/FavoritesMenu/Resources/NotifyIconResources.xaml
+++ b/FavoritesMenu/Resources/NotifyIconResources.xaml
@@ -38,7 +38,7 @@
         SearchMenuItemStyle="{StaticResource SearchMenuItemStyle}"
         SeparatorStyle="{StaticResource {x:Static MenuItem.SeparatorStyleKey}}" />
 
-    <ContextMenu x:Key="SysTrayMenu" x:Shared="false" ItemsSource="{Binding Items}" ItemContainerStyleSelector="{StaticResource MenuItemStyleSelector}" />
+    <ContextMenu x:Key="SysTrayMenu" x:Shared="false" ItemsSource="{Binding Items}" ItemContainerStyleSelector="{StaticResource MenuItemStyleSelector}" IsOpen="{Binding IsContextMenuOpen}" />
 
     <ContextMenu x:Key="RightClickMenu" x:Shared="false">
         <MenuItem Header="Refresh" Command="{Binding RefreshItemsCommand}" />
