--- a/src/FavoritesMenu/Views/AboutPage.xaml
+++ b/src/FavoritesMenu/Views/AboutPage.xaml
@@ -16,5 +16,40 @@
         </ui:TextBlock>
         <ui:HyperlinkButton Margin="0,10,0,0"
                             NavigateUri="https://github.com/Chri-s/FavoritesMenu">https://github.com/Chri-s/FavoritesMenu</ui:HyperlinkButton>
+        <ui:TextBlock FontTypography="BodyStrong" Margin="0,10,0,0">License</ui:TextBlock>
+        <ui:TextBlock TextWrapping="Wrap">
+            MIT License
+            <LineBreak/>
+            <LineBreak/>
+            Copyright (c) 2024 chri-s
+            <LineBreak/>
+            <LineBreak/>
+            Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+            <LineBreak/>
+            <LineBreak/>
+            The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+            <LineBreak/>
+            <LineBreak/>
+            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+        </ui:TextBlock>
+        <ui:TextBlock FontTypography="BodyStrong" Margin="0,10,0,0">Open Source Components used:</ui:TextBlock>
+        <ui:HyperlinkButton Margin="0,10,0,0"
+                            NavigateUri="https://github.com/CommunityToolkit/dotnet" ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=NavigateUri, Mode=OneTime}">CommunityToolkit.Mvvm</ui:HyperlinkButton>
+        <ui:HyperlinkButton Margin="0,10,0,0"
+                            NavigateUri="https://github.com/HavenDV/H.NotifyIcon" ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=NavigateUri, Mode=OneTime}">H.NotifyIcon.Wpf</ui:HyperlinkButton>
+        <ui:HyperlinkButton Margin="0,10,0,0"
+                            NavigateUri="https://github.com/lepoco/wpfui" ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=NavigateUri, Mode=OneTime}">WPF-UI</ui:HyperlinkButton>
     </StackPanel>
 </Page>
