--- a/src/FavoritesMenu/Views/SettingsPage.xaml
+++ b/src/FavoritesMenu/Views/SettingsPage.xaml
@@ -54,11 +54,7 @@
                 </StackPanel>
             </ui:CardControl.Header>
 
-            <!-- SelectedIndex="{Binding ViewModel.CurrentApplicationTheme, Converter={StaticResource ThemeToIndexConverter}, Mode=TwoWay}" -->
-            <ComboBox MinWidth="200">
-                <ComboBoxItem Content="Light" />
-                <ComboBoxItem Content="Dark" />
-                <ComboBoxItem Content="High Contrast" />
+            <ComboBox MinWidth="200" ItemsSource="{Binding Themes}" SelectedItem="{Binding SelectedTheme}" DisplayMemberPath="DisplayName">
             </ComboBox>
         </ui:CardControl>
 
